--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <aside class="menu">
             <ul>
                 <h3>Tutorials</h3>
+                <hr>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#">HTML</a></li>
                 <li><a href="#">CSS</a></li>
@@ -42,6 +43,7 @@
                 <li><a href="#">AJAX</a></li>
                 <li><a href="#">jQuery</a></li>
                 <h3>Programming</h3>
+                <hr>
                 <li><a href="#">JAVA</a></li>
                 <li><a href="#">Python</a></li>
                 <li><a href="#">C++</a></li>
@@ -50,7 +52,7 @@
             </ul>
         </aside>
     <section class="tutorial-box">
-        <div class="polaroid">
+        <div class="titel polaroid">
         <h1 id="home">Workshop - Tutorial Portfolio</h1>
         <p>Projekt:</p><p><strong>Tutorial Portfolio:</strong></p>
         </div>
@@ -565,7 +567,7 @@ a:hover{
     </section>
     </section>
     </main>
-    <footer class="polaroid">
+    <footer>
         <ul>
             <h3>Entwickler:</h3>
             <li><a href="https://github.com/aisha2000-hub" target="_blank">Aisha</a>|</li>
