--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                       <h1>Workshop - Tutorial Portfolio</h1>
                       <section id="box-vens" class="polaroid"></section>
                       <section id="box-aisha" class="polaroid">
-                      <h2>Wie kann mam <strong>über mich</strong>, mit HTMLund CSS erstellen!</h2>
+                      <h2>Wie kann man die erste Teil von <strong>Lebenslauf</strong>, mit HTML und CSS erstellen!</h2>
                       <div id="aisha-box">
-                      <img id="aisha" src="Screenshot from 2021-10-14 13-40-40.png" alt="beispielbild">
+                      <img id="aisha" src="CV-foto.png" alt="CV-foto">
 
                 <!-- HTML Section-->
             <div class="source-box"> 
