Code fix mit Aisha 17.10.21

--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
         </div>
 <!-- Aisha Section-->
         <section id="box-aisha" class="polaroid">
-                      <h2>Wie kann mam <strong>über mich</strong>, mit HTMLund CSS erstellen!</h2>
-                      <div id="aisha-box">
-                      <img id="aisha" src="./image/Screenshot from 2021-10-14 13-40-40.png" alt="beispielbild">
-
+                      <h2>Wie kann man die erste Teil von <strong>Lebenslauf</strong>, mit HTML und CSS erstellen!</h2>
+                     
                 <!-- HTML Section-->
-            <div class="source-box"> 
+            <div class="source-box">
+                 
         <figure>
                      <figcaption><strong>HTML</strong></figcaption>
-                    <textarea name="" id="" cols="30" rows="10">
+                    <textarea name="" id="" cols="30" rows="20">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -114,10 +113,16 @@
 </div> 
 </textarea>
 </figure> 
-    <!-- CSS Section-->
+    <!-- CV-Foto Section-->
+    <figure>
+    <figcaption id="cv-foto"><strong>CV-Foto</strong></figcaption>
+    <img id="aisha" src="./image/CV-foto.png" alt="CV-foto">
+    <figcaption id="cv-foto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum voluptatum fuga repellat perferendis similique illo consectetur mollitia adipisci pariatur, non quae a magni natus laborum recusandae vel nobis dolorem eveniet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti suscipit ab laudantium aspernatur in fugit ipsum quis quidem ad delectus!</figcaption>
+</figure>
+<!-- CSS Section-->
 <figure>
 <figcaption><strong>CSS</strong></figcaption>
-<textarea name="" id="" cols="30" rows="10">
+<textarea name="" id="" cols="30" rows="20">
 geburt{
  display: flex;
 }
@@ -164,7 +169,7 @@ padding: 10px;
          </textarea>
        </figure>
     </div> 
-</div>  
+  
 <div class="polaroid">
               <h2>Description: </h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae est quia ab blanditiis, aliquid minus reprehenderit et ut ea incidunt minima illo eveniet id istevoluptatum, doloremque tenetur, a rerum deleniti ullam ipsam asperiores aliquam. Ea qui expedita nam quas mollitia facere laborum saepe nobis. Culpa, illo? Cumque sit consequuntur, repellendus quos magnam eius sed similique corporis, provident inventore est, error beatae debitis amet dolores. Animi voluptates dolore dolor nam excepturiratione odit perferendis nihil laborum nobis culpa sapiente temporibus eaque officiis non dignissimos aspernatur consequatur corporis, nulla repellendus. Rem velit liberonon expedita sapiente sunt reiciendis vitae, neque natus nisi amet, tenetur quas ducimus sequi illo error. Adipisci ducimus aspernatur quo. Alias eveniet ipsum animi, veromodi facere recusandae magnam itaque aliquam esse quia nesciunt perferendis reprehenderit iusto fugiat nisi deleniti ratione temporibus autem, pariatur, est totam.Voluptatum excepturi soluta cumque alias odit magni in obcaecati harum molestias rem!</p>
@@ -180,7 +185,7 @@ padding: 10px;
                 <!-- Html Section-->
                 <figure>
                 <figcaption><strong>HTML</strong></figcaption>
-                <textarea name="" id="" cols="30" rows="10"> 
+                <textarea name="" id="" cols="30" rows="20"> 
 <!--Portfolio-->
 <section class="polaroid vr" id="portfolio">
     <div class="container">
@@ -240,7 +245,7 @@ padding: 10px;
                 <!-- CSS Section-->
                 <figure>
                 <figcaption><strong>CSS</strong></figcaption>
-                <textarea name="" id="" cols="30" rows="10">
+                <textarea name="" id="" cols="30" rows="20">
 .content img {
     overflow: visible;
     display: block;
@@ -388,7 +393,7 @@ footer {
             <div class="source-code">
                  <figure>
                     <figcaption><strong>HTML</strong></figcaption>
-                    <textarea name="" id="" cols="30" rows="10">
+                    <textarea name="" id="" cols="30" rows="20">
 <header>
 <img src="Photo12-10-2020_101912AM_1_1024x1024.webp" alt="">
 <aside>
@@ -481,7 +486,7 @@ footer {
 
 <figure>
     <figcaption><strong>CSS</strong></figcaption>
-        <textarea name="" id="" cols="30" rows="10">
+        <textarea name="" id="" cols="30" rows="20">
  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Birthstone&family=Cinzel:wght@500&display=swap');
 
 body{
